Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,18 +5,18 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: UseJavaVersion@1
+- task: JavaToolInstaller@0
   inputs:
-    versionSpec: '17' # Use the required Java version
+    versionSpec: '17'  # Use the required Java version
     jdkArchitecture: 'x64'
 
 - script: |
     javac HelloWorld.java
     java HelloWorld
   displayName: 'Compile and Run Java Program'
+
 - task: CmdLine@2
   inputs:
     script: |
       echo Write your commands here
-      
       echo Hello world
